clusters/cluster0/kubernetes/apps/media/readarr/app/readarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: readarr
  name: readarr
  namespace: media
spec:
  template:
    metadata:
      labels:
        app: readarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: control-00
      containers:
        - image: ghcr.io/pennydreadful/bookshelf:hardcover
          imagePullPolicy: Always
          name: readarr
          ports:
            - name: readarr-port
              containerPort: 8787
              protocol: TCP
          volumeMounts:
            - name: readarr-config
              mountPath: /config
            - name: readarr-media
              mountPath: /books
          resources:
            requests:
              memory: 8Gi
            limits:
              memory: 8Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: readarr-config
          persistentVolumeClaim:
            claimName: "readarr-config-ceph"
        - name: readarr-media
          persistentVolumeClaim:
            claimName: "media-pvc"
  selector:
    matchLabels:
      app: readarr
