clusters/cluster0/kubernetes/apps/media/readarr/app/readarr-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr
  namespace: media
spec:
  hostnames:
  - readarr.gregbob.net
  parentRefs:
  - name: wildcard-gregbob-net
    namespace: cert-manager
  rules:
  - backendRefs:
    - name: readarr-service
      port: 8787
    matches:
    - path:
        type: PathPrefix
        value: /
